# AwakenFitnessTracker

./: .pre-commit-config.yaml  LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/AwakenFit/: admin.py  apps.py
backend/AwakenFit/migrations/: 0001_initial.py  0002_exercise_workout.py  0003_set.py
backend/AwakenFit/models/: __init__.py  base_object.py  exercise.py  movement.py  set.py  workout.py
backend/core/: settings.py
core/AwakenFit/: manage.py
core/AwakenFit/AwakenFit/: asgi.py  settings.py  urls.py  wsgi.py
core/core/: settings.py
